--- a/assets/style.scss
+++ b/assets/style.scss
@@ -262,9 +262,9 @@ li a {
     object-fit: cover;
     object-position: 50% 100% 20%;
     filter: brightness(80%);
-    animation: hover 2s;
+    /** animation: hover 2s;
     animation-play-state: paused;
-    animation-fill-mode: backwards;
+    animation-fill-mode: backwards; **/
     overflow-y: hidden;
 }
 
@@ -290,13 +290,11 @@ li a {
 .banner {
   display: block;
   position: absolute;
-  width: 75%;
-  left: 10vw;
+  width: 100%;
   top: 220vh;
   height: 200px;
-  background-color: rgb(15, 26, 26);
+  background-color: rgb(10, 23, 34);
   border-radius: 25px;
-  border: green solid 2px;
   box-shadow: 2px 2px 2px;
   overflow-y: hidden;
 }
@@ -319,20 +317,18 @@ li a {
   text-align: center;
   top: 7vh;
   left: 35vw;
+  margin-right: 3vw;
   overflow-y: hidden;
 }
 
 .banner1 {
   display: block;
   position: absolute;
-  width: 75%;
-  left: 16vw;
+  width: 100%;
   top: 247vh;
   height: 200px;
-  background-color: rgb(15, 26, 26);
+  background-color: rgb(10, 23, 34);
   border-radius: 25px;
-  border: green solid 2px;
-  box-shadow: 2px 2px 2px;
   overflow-y: hidden;
 }
 
@@ -354,20 +350,18 @@ li a {
   text-align: center;
   top: 7vh;
   left: 35vw;
+  margin-right: 3vw;
   overflow-y: hidden;
 }
 
 .banner2 {
   display: block;
   position: absolute;
-  width: 75%;
-  left: 10vw;
+  width: 100%;
   top: 274vh;
   height: 200px;
-  background-color: rgb(15, 26, 26);
+  background-color: rgb(10, 23, 34);
   border-radius: 25px;
-  border: green solid 2px;
-  box-shadow: 2px 2px 2px;
   overflow-y: hidden;
 }
 
@@ -389,19 +383,7 @@ li a {
   text-align: center;
   top: 7vh;
   left: 35vw;
+  margin-right: 3vw;
   overflow-y: hidden;
 
-}
-
-.project-title {
-  color: white;
-  font-weight: 200;
-  padding: 0 25px;
-  background-color: rgb(15, 26, 26);
-  border-radius: 25px;
-  border: green solid 2px;
-  font-size: 2em;
-  position: absolute;
-  top: 208.5vh;
-  left: 42vw;
 }
